--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,11 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.VIBRATE"/>
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+
     <uses-feature android:name="android.hardware.sensor.accelerometer" android:required="true" />
 
     <application
@@ -15,15 +20,28 @@
         android:supportsRtl="true"
         android:theme="@style/Theme._25B10357A2"
         tools:targetApi="31">
+
+        <!-- Google Maps API Key -->
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyDmeH64PXAfB6VgH3LTsRqzBLWG1ch-6f8" />
+
         <activity
-            android:name="dev.tw1t1.a25b_10357_a2.MainActivity"
+            android:name="dev.tw1t1.a25b_10357_a2.MenuActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:name="dev.tw1t1.a25b_10357_a2.GameActivity"
+            android:exported="false" />
+
+        <activity
+            android:name="dev.tw1t1.a25b_10357_a2.RecordsActivity"
+            android:exported="false" />
     </application>
 
 </manifest>
